<resources>
    <string name="app_name">PC Builder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fire">confirm</string>
    <string name="aboutFirst">A PC Builder Tool for Android,written in Java.</string>
    <string name="aboutSecond">Author P9J7</string>
    <string name="copyright" translatable="false">Copyright（C）2020 by P9J7</string>
    <string name="email" translatable="false">p9j7stef@gmail.com</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="copy_as_text">copy as text</string>
    <string name="save_to_pic">save to jpg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="remove">REMOVE</string>
    <string name="sw">SWITCH</string>
    <string name="buy">Buy from</string>
    <string name="new_build">New Build</string>
    <string name="pick_processor">PICK PROCESSOR</string>
    <string name="pick_motherboard">PICK MOTHERBOARD</string>
    <string name="pick_gpu">PICK GPU</string>
    <string name="pick_mem">PICK MEMORY</string>
    <string name="pick_storage">PICK STORAGE</string>
    <string name="pick_psu">PICK PSU</string>
    <string name="pick_casing">PICK CASING</string>
    <string name="search_tooltip">Search parts</string>
    <string name="total">TOTAL：</string>
    <string name="add_to_build">ADD TO BUILD</string>
    <string name="pick_cooler">PICK COOLER</string>
    <string name="no_data">No data to save</string>
    <string name="tosave">Save Build?</string>
    <string name="tocopy">Copy Build?</string>
    <string name="save">Save</string>
    <string name="cancel">No</string>
    <string name="back">Cancel</string>
    <string name="build_name">Build Name</string>
    <string name="deltip">Delete Build</string>
    <string name="havacopyed">Please paste to share</string>
    <string name="PCBuilderShare">PC Builder Share</string>
    <string name="havesaved">image saved in picture</string>
    <string name="pick_display">PICK DISPLAY</string>
    <string name="pick_keyboard">PICK KEYBOARD</string>
    <string name="pick_mouse">PICK MOUSE</string>
</resources>
