<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Fragment.PartFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/removeLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ll_customer_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/no_background"
                android:clickable="false"
                android:src="@drawable/ic_delete_black_24dp"
                android:tag="REMOVE" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/remove" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buyLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ll_customer_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/buyBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/no_background"
                android:clickable="false"
                android:src="@drawable/ic_jd"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="698dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:text="@string/buy"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="353dp"
                tools:layout_editor_absoluteY="679dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ll_customer_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/no_background"
                android:clickable="false"
                android:src="@drawable/ic_add_black_24dp"
                tools:layout_editor_absoluteX="315dp"
                tools:layout_editor_absoluteY="678dp" />

            <TextView
                android:id="@+id/addText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:text="@string/add_to_build"
                tools:layout_editor_absoluteX="248dp"
                tools:layout_editor_absoluteY="702dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/switchLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ll_customer_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/switchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/no_background"
                android:clickable="false"
                android:src="@drawable/ic_switch" />

            <TextView
                android:id="@+id/SWITCH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:text="@string/sw" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/partNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="280000+"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <View
                android:id="@+id/divider4"
                android:layout_width="2dp"
                android:layout_height="17dp"
                android:background="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/partName2"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/partName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="Intel Core i5-9400F"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partPicItem1" />

            <TextView
                android:id="@+id/partPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="￥999"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/divider4"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="评价数"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/divider4"
                app:layout_constraintTop_toBottomOf="@+id/partName2" />

            <TextView
                android:id="@+id/partItemDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Speed:3.6 to 4.9GHz\nCore:8/8"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/partName2"
                app:layout_constraintStart_toStartOf="@+id/partName2"
                app:layout_constraintTop_toBottomOf="@+id/partPrice2" />

            <ImageView
                android:id="@+id/partPicItem1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/cpu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="?attr/homeAsUpIndicator"
        app:backgroundTint="@color/titlecolor"
        app:fabSize="auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>